--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DEV_BACKEND_URL = https://truly-contacts.herokuapp.com/api           
-PROD_BACKEND_URL = https://prod.truly-contacts.herokuapp.com/api
+DEV_BACKEND_URL = "https://truly-contacts.herokuapp.com/api"           
+PROD_BACKEND_URL = "https://prod.truly-contacts.herokuapp.com/api"
